# suitme

./: .gitignore  API_DOC.md  TODO.md  deploy.ps1  deploy.sh  main.py  pyproject.toml  test-bento.html  test.html  技术参考文档.md
.kiro/specs/code-refactoring/: design.md  requirements.md  tasks.md
.kiro/specs/database-refactor/: design.md  requirements.md  tasks.md
.kiro/specs/suitme-image-generation/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
app/: __init__.py  config.py  database.py  main.py  prompts.py
app/infra/: __init__.py  apimart_client.py  apimart_errors.py  callback_handler.py  oss_client.py  task_poller.py
app/models/: __init__.py
app/repositories/: __init__.py  base_model_task_repository.py  base_task_repository.py  edit_task_repository.py  image_repository.py  outfit_task_repository.py  task_repository.py
app/routes/: __init__.py  models.py  tasks.py
app/schemas/: __init__.py
app/services/: __init__.py  model_service.py  polling_callbacks.py  polling_service.py  task_query_service.py  task_service.py
docs/: CHANGELOG.md
docs/apifox/: README.md  baseURL.md  models_default.md  models_edit.md  models_outfit.md  tasks_status.md
scripts/: init_db.py
tests/: test_callback_properties.py  test_polling_properties.py  test_repository_properties.py  test_routes_properties.py  test_schemas_properties.py  test_service_properties.py
